--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LG Refrigerator Kickoff Meeting</title>
+    <title>LG Refrigerator Team One Kickoff Meeting</title>
   </head>
   <body>
     <header>
-        <label for="start">Today's date:</label>
+        <label for="today">Today's date:</label>
         <input type="date" id="today" name="today-date" value="2024-04-15"
         min="2024-01-01" max="2024-12-31">
         <br />
@@ -18,6 +18,7 @@
                 <li><a href="#introductions">Introductions</a></li>
                 <li><a href="#unfinishedbusiness">Unfinished Business</a></li>
                 <li><a href="#newbusiness">New Business</a></li>
+                <li><a href="#notcovered">Not Yet Covered </a></li>
                 <li><a href="#misc">Misc</a></li>
             </ol>
         </nav>
@@ -25,9 +26,10 @@
     </header>
     <main>
         <h1>LG Refrigerators</h1>
+        <link href="favicon.ico" rel="favicon" />
         <img
         src="https://media.us.lg.com/transform/ecomm-PDPGallery-1100x730/3252e192-1149-46a1-b1a0-c75302f10b67/md07504492-Z002-jpg"
-        alt="one and done"
+        alt="LG Refrigerators"
         width="400"
         />
         <hr />
@@ -48,17 +50,221 @@
         <section>
             <h3>Roles:</h3>
             <ul>
-                <li>Team Leader</li>
-                
-                <li>Project Manager</li>
-                <li>Designers</li>
-                <li>Software Developers</li>
-                <li>Hardware Developers</li>
+                <li><span class="role">Team Leader:</span></li>
+                <br/>
+                Katie Kim
+                <br/>
+                <br/>
+                <li><span class="role">Project Manager:</span></li>
+                <br/>
+                Michael Scott
+                <br/>
+                <br/>
+                <li><span class="role">Designers:</span></li>
+                <br/>
+                Dwight Schrute
+                <br/>
+                <br/>
+                Claire Dunphy
+                <br/>
+                <br/>
+                <li><span class="role">Software Developers:</span></li>
+                <br/>
+                Stephanie Soo
+                <br/><br/>
+                Kevin Malone
+                <br/><br/>
+                <li><span class="role">Hardware Developers:</span></li>
+                <br/>
+                Jeff Goldblum
+                <br/><br/>
+                Elon Musk
+            </ul>
+        </section>
+        <hr />
+        <h2 id="unfinishedbusiness">Unfinished Business</h2>
+        <section>
+            <h3>Launch of the new LG refrigerator model TheOrgVenFridge</h3>
+            <ul>
+                <li><b class="feature">Soda dispenser feature</b>
+                    <p>The refrigerator will have a soda dispenser feature alongside 
+                        existing water dispenser that displays a variety of beverages
+                        on the screen for the consumer to choose from. There will also
+                        be a feature for the exactly desired amount of ice.
+                    </p>
+                </li>
+                <li><b class="feature">Vending machine feature</b>
+                    <p>TheOrgVenFridge will feature the vending machine feature
+                        which dispenses out the desired item out of the fridge with the
+                        click of a button on the display screen or the <b>ThinQ app</b>. This 
+                        <b>conserves time and also energy/electricity</b> that is usually wasted 
+                        looking around while having the fridge door open.
+                    </p>
+                </li>
+                <li><b class="feature">Automatic sorter</b>
+                    <p>This refrigerator also features an automatic sorter which 
+                        automatically sorts the food in any arrangement the consumer 
+                        pleases all done using the <b>ThinQ app</b>.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>LG refrigerator event 8/22/2024</h3>
+            <ul>
+                <li>Launching of TheOrgVenFridge
+                </li>
+                <br />
+                <li>Market/Target Audience:
+                    <p>We want to appeal to the general public, but more importantly a range
+                        from adults in their 20's-50's, whether they live on their own or 
+                        have families. 
+                    </p>
+                </li>
+                <li>Event Location: 
+                    <p>
+                        Speculated to be in dtla Honda Center.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <hr />
+        <h2 id="newbusiness">New Business</h2>
+        <section>
+            <h3>TheOrgVenFridge</h3>
+            <ol>
+                <li>An algorithm for the <i>sorting feature</i>:
+                    <br />
+                    <br />
+                    <label for="algorithm">Idea for Algorithm (1 to 100 characters):</label>
+                    <br />
+                    <br />
+                    <input type="text" id="algorithm" name="algorithm" 
+                    required minlength="1" maxlength="200" size="100
+                    " />
+                </li>
+                <br />
+                <li>Potential colors of TheOrgVenFridge:
+                    <br />
+                    <ul>
+                        <li>rose gold</li>
+                        <li>space grey</li>
+                        <li>steel grey</li>
+                        <li>silver</li>
+                        <li>obsidian black</li>
+                        <li>baby blue</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>LG refrigerator event 8/22/2024</h3>
+            <ol>
+                <li><strong>Location change to Salk Institute</strong>
+                </li>
+                <br />
+                <li>Theme: Organizationcore
+                    <p>We want to appeal to the people who want to live more comfortably
+                        while thinking of the environment. Seratonin levels increase in an
+                        organized environment, which is the theme we want to treat the 
+                        consumers with throughout the event, acting as the foreshadow of
+                        TheOrgVenFridge.
+                    </p>
+                </li>
+                <li> Color Scheme: 
+                    <br/>
+                    <details>
+                        <summary>Details</summary>
+                        We want a simple color scheme that is chic and modern yet easy 
+                        on the eyes and fun. 
+                    </details>
+                    <form>
+                        <fieldset>
+                            <legend>Choose a color scheme</legend>
+                            <input type="radio" id="1" name="colorscheme" value="1"/>
+                            <label for="1">1</label><br/>
+                            <input type="radio" id="1" name="colorscheme" value="2"/>
+                            <label for="1">2</label><br/>
+                            <input type="radio" id="1" name="colorscheme" value="3"/>
+                            <label for="1">3</label><br/>
+                            <input type="radio" id="1" name="colorscheme" value="4"/>
+                            <label for="1">4</label><br/>
+                        </fieldset>
+                    </form>
+                </li>
+            </ul>
+        </section>
+        <hr />
+        <h2 id="notcovered">Not Yet Covered</h2>
+        <section>
+            <ul>
+                <li>Giveaway for the event
+                </li>
+                <br />
+                <li>Advertising
+                </li>                
+                <br />
+                <li>Ticketing
+                </li>
+            </ul>
+        </section>
+        <hr />
+        <h2 id="misc">Misc</h2>
+        <section>
+            <h3>Comments/Questions/Concerns</h3>
+            <ul>
+                <li>Claire Dunphy:
+                    <br/>
+                    “What is the <em>point</em> of the soda dispenser? It would be 
+                    a <em>waste</em> of space and energy!”
+                </li>
+                <br />
+                <li>Dwight Schrute:
+                    <br/>
+                    “Any plans of downsizing? At least downsizing the event in order to 
+                    save costs.”
+                </li>                
+                <br />
+                <li>Michael Scott:
+                    <br/>
+                    “We should throw the event like a big happy family <em>party</em>!”
+                </li>
             </ul>
         </section>
     </main>
+    <hr/>
+    <br/>
     <footer>
-
+        <label for="how-was-meeting">How was this meeting:</label>
+        <input list="ratings" id="how-was-meeting" name="how-was-meeting"/>
+        <datalist id="ratings">
+            <option value="Awesome and efficient!"></option>
+            <option value="Just alright, could be more efficient"></option>
+            <option value="Could have been better overall"></option>
+            <option value="N/A"></option>
+        </datalist>
+        <br/><br/>
+        <label for="next-meeting">When should the next prospective meeting be:</label>
+        <select name="time" id="next-meeting">
+            <option value="">--Please Choose an option--</option>
+            <option value="In a couple days">In a couple days</option>
+            <option value="Next week">Next week</option>
+            <option value="In a couple weeks/month">In a couple weeks/month</option>
+            <option value="TBD">TBD</option>
+        </select>
+        <br/><br/>
+        <form action="" method="get" class="sendacopy">
+            <div class="sendacopy">
+                <label for="email">Enter your email:</label>
+                <input type="text" name="email" id="name" required/>
+            </div>
+            <br/>
+            <div class="sendacopy">
+                <button type="button" class="Send myself a copy">
+                    Send myself a copy
+                </button>
+            </div>
+        </form>
     </footer>
   </body>
 </html>
