--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <h1>LG Refrigerators</h1>
-        <link href="favicon.ico" rel="favicon" />
+        <link href="favicon.png" rel="favicon" />
         <img
         src="https://media.us.lg.com/transform/ecomm-PDPGallery-1100x730/3252e192-1149-46a1-b1a0-c75302f10b67/md07504492-Z002-jpg"
         alt="LG Refrigerators"
