--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LG Refrigerator Team One Kickoff Meeting</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <header>
@@ -26,7 +30,6 @@
     </header>
     <main>
         <h1>LG Refrigerators</h1>
-        <link href="favicon.png" rel="favicon" />
         <img
         src="https://media.us.lg.com/transform/ecomm-PDPGallery-1100x730/3252e192-1149-46a1-b1a0-c75302f10b67/md07504492-Z002-jpg"
         alt="LG Refrigerators"
