--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LG Refrigerator Team One Kickoff Meeting</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <header>
@@ -234,6 +234,19 @@
                 </li>
             </ul>
         </section>
+        <hr/>
+        <h2>Meeting Recording</h2>
+        <video controls width="250">
+            <source src="Lab-2-video.mp4" type="video/mp4" />
+        </video>
+        <br/>
+        <h2>Meeting Audio</h2>
+        <figure>
+          <figcaption>Listen to the meeting audio:</figcaption>
+          <audio controls src="Lab-2-audio.m4a"></audio>
+          <a href="Lab-2-audio.m4a">
+            Download audio</a>
+        </figure>
     </main>
     <hr/>
     <br/>
