--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@
             <option value="In a couple weeks/month">In a couple weeks/month</option>
             <option value="TBD">TBD</option>
         </select>
+        <label for="feedback">Any comments/questions/concerns for this meeting:</label>
+        <textarea id="feedback" name="feedback" rows="5" cols="33">
+        In today's meeting...
+        </textarea>
         <br/><br/>
         <form action="" method="get" class="sendacopy">
             <div class="sendacopy">
