--- a/index.html
+++ b/index.html
@@ -251,6 +251,11 @@
     <hr/>
     <br/>
     <footer>
+        <img
+        src="IMG_5787.png"
+        alt="whiteboard"
+        width="400"
+        />
         <label for="how-was-meeting">How was this meeting:</label>
         <input list="ratings" id="how-was-meeting" name="how-was-meeting"/>
         <datalist id="ratings">
