--- a/index.html
+++ b/index.html
@@ -194,6 +194,15 @@
                             <label for="1">4</label><br/>
                         </fieldset>
                     </form>
+                    <br/>
+                    1.
+                    <img class="1" src="1.png" alt="1" width="300"/>
+                    2.
+                    <img class="2" src="2.png" alt="2"width="300"/>
+                    3.
+                    <img class="3" src="3.png" alt="3"width="300"/>
+                    4.
+                    <img class="4" src="4.png" alt="4"width="300"/>
                 </li>
             </ul>
         </section>
@@ -251,11 +260,8 @@
     <hr/>
     <br/>
     <footer>
-        <img
-        src="IMG_5787.png"
-        alt="whiteboard"
-        width="400"
-        />
+        <img class="whiteboard" src="IMG_5787.png" alt="whiteboard" width="400"/>
+        <br/>
         <label for="how-was-meeting">How was this meeting:</label>
         <input list="ratings" id="how-was-meeting" name="how-was-meeting"/>
         <datalist id="ratings">
