--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
                     <label for="algorithm">Idea for Algorithm (1 to 100 characters):</label>
                   
                     <input type="text" id="algorithm" name="algorithm" 
-                    required minlength="1" maxlength="200" size="100
-                    " />
+                    required minlength="1" maxlength="200" size="100"/>
                 </li>
              
                 <li>Potential colors of TheOrgVenFridge:
