--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <form action="" method="get" class="sendacopy">
             <div class="sendacopy">
                 <label for="email">Enter your email:</label>
-                <input type="text" name="email" id="name" required/>
+                <input type="text" name="email" id="email" required/>
             </div>
             <br/>
             <div class="sendacopy">
