--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         In today's meeting...
         </textarea>
         <br/><br/>
-        <form action="" method="get" class="sendacopy">
+        <form action="sendacopy" method="get" class="sendacopy">
             <div class="sendacopy">
                 <label for="email">Enter your email:</label>
                 <input type="text" name="email" id="email" required/>
