--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         min="2024-01-01" max="2024-12-31">
         <br />
         <br />
-        <div>Meeting Agenda</div>
+        <div class="agenda">Meeting Agenda</div>
         <nav>
             <ol>
                 <li><a href="#introductions">Introductions</a></li>
@@ -44,7 +44,7 @@
         <hr />
         <h2 id="introductions">Introductions</h2>
         <section>
-            <h3>Attendance:</h3>
+            <h3 id="attendance">Attendance:</h3>
             <ul>
                 <li><input type="checkbox"/>Katie Kim</li>
                 <li><input type="checkbox"/>Michael Scott</li>
@@ -89,7 +89,7 @@
         <hr />
         <h2 id="unfinishedbusiness">Unfinished Business</h2>
         <section>
-            <h3>Launch of the new LG refrigerator model TheOrgVenFridge</h3>
+            <h3 class="launch">Launch of the new LG refrigerator model TheOrgVenFridge</h3>
             <ul>
                 <li><b class="feature">Soda dispenser feature</b>
                     <p>The refrigerator will have a soda dispenser feature alongside 
@@ -115,7 +115,7 @@
             </ul>
         </section>
         <section>
-            <h3>LG refrigerator event 8/22/2024</h3>
+            <h3><span id="event">LG refrigerator event 8/22/2024</span></h3>
             <ul>
                 <li>Launching of TheOrgVenFridge
                 </li>
@@ -136,7 +136,7 @@
         <hr />
         <h2 id="newbusiness">New Business</h2>
         <section>
-            <h3>TheOrgVenFridge</h3>
+            <h3 id="orgvenfridge">TheOrgVenFridge</h3>
             <ol>
                 <li>An algorithm for the <i>sorting feature</i>:
                     
