--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
     </header>
     <main>
-        <h1>LG Refrigerators</h1>
+        <h1 style="text-align: center">LG Refrigerators</h1>
         <img
         src="https://media.us.lg.com/transform/ecomm-PDPGallery-1100x730/3252e192-1149-46a1-b1a0-c75302f10b67/md07504492-Z002-jpg"
         alt="LG Refrigerators"
@@ -44,7 +44,7 @@
         <hr />
         <h2 id="introductions">Introductions</h2>
         <section>
-            <h3>Attendance:</h3>
+            <h3 style="color:lightseagreen">Attendance:</h3>
             <ul class="attendance">
                 <li><input type="checkbox"/>Katie Kim</li>
                 <li><input type="checkbox"/>Michael Scott</li>
@@ -203,7 +203,7 @@
         <hr />
         <h2 id="misc">Misc</h2>
         <section>
-            <h3>Comments/Questions/Concerns</h3>
+            <h3 class="comments">Comments/Questions/Concerns</h3>
             <ul>
                 <li>Claire Dunphy: 
                     <p>
