include display properties

--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
         <section>
             <h3 style="color:lightseagreen">Attendance:</h3>
             <ul class="attendance">
-                <li><input type="checkbox"/>Katie Kim</li>
-                <li><input type="checkbox"/>Michael Scott</li>
-                <li><input type="checkbox"/>Dwight Schrute</li>
-                <li><input type="checkbox"/>Kevin Malone</li>
-                <li><input type="checkbox"/>Claire Dunphy</li>
-                <li><input type="checkbox"/>Stephanie Soo</li>
-                <li><input type="checkbox"/>Elon Musk</li>
-                <li><input type="checkbox"/>Jeff Goldblum</li>
+                <li id="inline"><input type="checkbox"/>Katie Kim</li>
+                <li id="inline"><input type="checkbox"/>Michael Scott</li>
+                <li id="inline"><input type="checkbox"/>Dwight Schrute</li>
+                <li id="inline"><input type="checkbox"/>Kevin Malone</li>
+                <li id="inline"><input type="checkbox"/>Claire Dunphy</li>
+                <li id="inline"><input type="checkbox"/>Stephanie Soo</li>
+                <li id="inline"><input type="checkbox"/>Elon Musk</li>
+                <li id="inline"><input type="checkbox"/>Jeff Goldblum</li>
             </ul>
         </section>
         <section>
             <h3>Roles:</h3>
             <ul class="roles">
-                <li><span>Team Leader:</span> Katie Kim</li>
-                <li><span>Project Manager:</span> Michael Scott</li>
-                <li><span>Designers:</span> Dwight Schrute, Claire Dunphy</li>
-                <li><span>Software Developers:</span> Stephanie Soo, Kevin Malone</li>
-                <li><span>Hardware Developers:</span> Jeff Goldblum, Elon Musk</li>
+                <li id="block"><span>Team Leader:</span> Katie Kim</li>
+                <li id="block"><span>Project Manager:</span> Michael Scott</li>
+                <li id="block"><span>Designers:</span> Dwight Schrute, Claire Dunphy</li>
+                <li id="block"><span>Software Developers:</span> Stephanie Soo, Kevin Malone</li>
+                <li id="block"><span>Hardware Developers:</span> Jeff Goldblum, Elon Musk</li>
             </ul>
         </section>
         <hr />
@@ -187,7 +187,7 @@
             </ol>
         </section>
         <hr />
-        <h2 id="notcovered">Not Yet Covered</h2>
+        <h2>Not Yet Covered</h2>
         <section>
             <ul>
                 <li>Giveaway for the event
