--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </section>
         <hr/>
         <h2>Meeting Recording</h2>
-        <video controls width="250">
+        <video controls width="250" id="video">
             <source src="Lab-2-video.mp4" type="video/mp4" />
         </video>
         <br/>
