changed element position

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img
         src="https://media.us.lg.com/transform/ecomm-PDPGallery-1100x730/3252e192-1149-46a1-b1a0-c75302f10b67/md07504492-Z002-jpg"
         alt="LG Refrigerators"
-        width="400"
+        width="400"  id="fridge"
         />
         <hr />
         <h2 id="introductions">Introductions</h2>
