add pseudo-class elements

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
             <br/>
             <div class="sendacopy">
-                <button type="button" class="Send myself a copy">
+                <button type="button" class="Sendcopy">
                     Send myself a copy
                 </button>
             </div>
