include media query

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         />
         <hr />
         <h2 id="introductions">Introductions</h2>
-        <section>
+        <div>
             <h3 style="color:lightseagreen">Attendance:</h3>
             <ul class="attendance">
                 <li id="inline"><input type="checkbox"/>Katie Kim</li>
@@ -55,7 +55,7 @@
                 <li id="inline"><input type="checkbox"/>Elon Musk</li>
                 <li id="inline"><input type="checkbox"/>Jeff Goldblum</li>
             </ul>
-        </section>
+        </div>
         <section>
             <h3>Roles:</h3>
             <ul class="roles">
