--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <li><strong>Location change to Salk Institute</strong>
                 </li>
               
-                <li class="theme">Theme: <span class="organizationcore">organizationcore</span>
+                <li><p class="theme">Theme: <span class="organizationcore">organizationcore</span></p>
                     <p>We want to appeal to the people who want to live more comfortably
                         while thinking of the environment. Seratonin levels increase in an
                         organized environment, which is the theme we want to treat the 
